# service-robot-grid-simulation

./: .gitignore
grid_sim/: CMakeLists.txt  package.xml
grid_sim/include/: Cell.h  GUI.h  SRGEnums.h  Simulator.h  World.h
grid_sim/include/container/: Command.h  Coordinate.h
grid_sim/include/grid_sim_msgs/: Command.capnp.c++  Command.capnp.h
grid_sim/include/srg/: Simulator.h
grid_sim/include/srg/sim/: Arm.h  ContainerUtils.h  Sensor.h  SimulatedAgent.h  SimulatedRobot.h
grid_sim/include/srg/sim/commands/: CommandHandler.h  ManipulationHandler.h  MoveCommandHandler.h  SpawnCommandHandler.h
grid_sim/include/srg/sim/communication/: Communication.h
grid_sim/include/srg/sim/containers/: Action.h  CellPerception.h  CellPerceptions.h  Perception.h  Perceptions.h  SimCommand.h  SimPerceptions.h
grid_sim/include/srg/sim/msgs/: PerceptionMsg.capnp  SimCommandMsg.capnp  SimPerceptionMsg.capnp  SimPerceptionsMsg.capnp  SimSensorMsg.capnp
grid_sim/include/srgsim/: Cell.h  Command.capnp  Command.capnp.c++  Command.capnp.h  GUI.h  Localisation.h  Object.h  SRGEnums.h  SRGIDManager.h  ServiceRobot.h  SimCommandMsg.capnp  SimPerceptionsMsg.capnp  SimSensorMsg.capnp  Simulator.h  SpriteType.h  World.h
grid_sim/include/srgsim/commands/: CommandHandler.h  DoorCommandHandler.h  ManipulationHandler.h  PickUpCommandHandler.h  PutDownCommandHandler.h
grid_sim/include/srgsim/communication/: CommandHandler.h  Communication.h  DoorCommandHandler.h  MoveCommandHandler.h  PickUpCommandHandler.h  PutDownCommandHandler.h  SpawnCommandHandler.h
grid_sim/include/srgsim/container/: Command.h  Coordinate.h
grid_sim/include/srgsim/containers/: CellPerceptions.h  ContainerUtils.h  Coordinate.h  Perception.h  SimCommand.h  SimPerceptions.h
grid_sim/include/srgsim/msgs/: SimPerceptionsMsg.capnp
grid_sim/include/srgsim/world/: Cell.h  Direction.h  Door.h  GUI.h  Localisation.h  Manipulation.h  Object.h  ObjectDetection.h  ObjectState.h  ObjectType.h  Room.h  RoomType.h  Sensor.h  ServiceRobot.h  SpriteObjectType.h  TaskType.h  World.h
grid_sim/msg/: Command.capnp
grid_sim/src/: Cell.cpp  Coordinate.cpp  GUI.cpp  Localisation.cpp  Object.cpp  SRGIDManager.cpp  Sensor.cpp  ServiceRobot.cpp  Simulator.cpp  SpriteType.cpp  World.cpp
grid_sim/src/commands/: DoorCommandHandler.cpp  ManipulationHandler.cpp  MoveCommandHandler.cpp  PickUpCommandHandler.cpp  PutDownCommandHandler.cpp
grid_sim/src/communication/: CommandHandler.cpp  Communication.cpp  DoorCommandHandler.cpp  MoveCommandHandler.cpp  PickUpCommandHandler.cpp  PutDownCommandHandler.cpp  SpawnCommandHandler.cpp
grid_sim/src/container/: ContainerUtils.cpp  Coordinate.cpp
grid_sim/src/srg/: Simulator.cpp
grid_sim/src/srg/sim/: Arm.cpp  ContainerUtils.cpp  Sensor.cpp  SimulatedAgent.cpp  SimulatedRobot.cpp
grid_sim/src/srg/sim/commands/: CommandHandler.cpp  ManipulationHandler.cpp  MoveCommandHandler.cpp  SpawnCommandHandler.cpp
grid_sim/src/srg/sim/communication/: Communication.cpp
grid_sim/src/srg/sim/containers/: Action.cpp
grid_sim/src/world/: Cell.cpp  Direction.cpp  Door.cpp  GUI.cpp  Localisation.cpp  Object.cpp  ObjectDetection.cpp  ObjectState.cpp  ObjectType.cpp  Room.cpp  RoomType.cpp  ServiceRobot.cpp  SpriteObjectType.cpp  TaskType.cpp  World.cpp
grid_sim/textures/: Department.tmx  Department.tsx  Rooms.tsx  test_texture.xcf
grid_sim_gui/: CMakeLists.txt  package.xml
grid_sim_gui/src/: GridSimGUI.cpp
grid_sim_gui/textures/: test_texture.xcf
srg_world/: CMakeLists.txt  package.xml
srg_world/include/srg/: GUI.h  World.h
srg_world/include/srg/viz/: Marker.h  SpriteType.h
srg_world/include/srg/world/: Agent.h  Cell.h  Coordinate.h  Direction.h  Door.h  Object.h  ObjectSet.h  ObjectState.h  ObjectType.h  Room.h  RoomType.h  ServiceRobot.h
srg_world/src/srg/: GUI.cpp  World.cpp
srg_world/src/srg/viz/: Marker.cpp  SpriteType.cpp
srg_world/src/srg/world/: Agent.cpp  Cell.cpp  Coordinate.cpp  Direction.cpp  Door.cpp  Object.cpp  ObjectSet.cpp  ObjectState.cpp  ObjectType.cpp  Room.cpp  RoomType.cpp  ServiceRobot.cpp
