<?xml version="1.0"?>
<package format="2">
  <name>srg_world</name>
  <version>0.0.0</version>
  <description>The srg_world package</description>

  <maintainer email="opfer@vs.uni-kassel.de">Stephan Opfer</maintainer>

  <license>MIT</license>

  <depend>id_manager</depend>
  <depend>system_config</depend>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
